# FoamAI

./: .env.example  .gitignore  DEPLOYMENT_ANALYSIS.md  Improvements.md  LICENSE  README.md  USER_APPROVAL_GUIDE.md  agentsMVP.md  continue_gpu_install.sh  convert_stl.py  demo_user_approval.py  diagnose_solver_failures.py  docker-compose.yml  final_gpu_install.sh  flake.nix  main.py  mesh_convergence_examples.md  migrate-images.sh  open_in_paraview.py  pyproject.toml  scale_stl.py  selectorInfo.md  setup_gpu_acceleration.sh  simple_gpu_install.sh  test-public-access.sh  test_all_geometries_mesh.py  test_all_solvers.py  test_all_solvers_comprehensive.py  test_all_solvers_final.py  test_comprehensive_solver_selector.py  test_delorean_vortex.py  test_mesh_convergence.py  test_new_solvers.py  test_remaining_solvers.py  test_solvers_comprehensive.py  test_stl_workflow.py  test_user_approval.py  test_user_approval_cli.py  test_visualization_demo.py  vizSet.md
.cursor/rules/: foamai-project-service.mdc  foamai-project-structure.mdc  nix-integration.mdc  project-rules.mdc  terminal-path-verification.mdc
.github/: mlc_config.json
.github/instructions/: self_improve.md  vscode_rules.md
.github/workflows/: README.md  docker.yml  docs.yml  infrastructure.yml
.taskmaster/: config.json  state.json
.taskmaster/docs/: devops_prd.txt
.taskmaster/tasks/: tasks.json
_docs/: Brainlift.md  vortex_shedding_visualization_guide.md
_docs/task_4_devops/: local_workflow.md  workflow.md
_docs/task_4_devops/demo_00/: DEMO_CHEAT_SHEET.md  demo-live.sh  test-connectivity.sh
backend_api/: .env.example  PVSERVER_IMPLEMENTATION_SUMMARY.md  VALIDATION_README.md  celery_worker.py  cleanup_pvservers.py  config.py  database.py  database_setup.py  debug_pvserver.py  main.py  process_utils.py  process_validator.py  pvserver_manager.py  pvserver_service.py  query_pvservers.py  requirements.txt  run_cavity.sh  schemas.py  simple_pvserver_check.py  stop_all_pvservers.py  test_api_workflow.py  test_foam_file_creation.py  test_local_zombie_handling.py  test_pvserver_functionality.py  test_zombie_handling.py  validate_deployment.py
backend_api/_docs/: FOAMAI_API_prd.md  SERVER_INTEGRATION.md  incremental_plan.md  refactor_candidates.md  refactor_candidates_3.md
client/: .env.sample  check_visualization.py  detail_dialogs.py  main.py  paraview_widget.py  simulation_setup_widget.py
dev/: README.md  local-test.sh  quick-start.sh  simulate-deployment.sh
docker/api/: .dockerignore  Dockerfile
docker/desktop/: Dockerfile  README.md  entrypoint.sh  requirements.txt
docker/openfoam/: .dockerignore  Dockerfile
docker/pvserver/: .dockerignore  Dockerfile
docs/: Agents.md  BackendAPI.md  Contributing.md  Desktop.md  DevOps.md  Presentation.md  agent_flow_recommendations.md  cfd_project_vision.md  issues.md  tech_stack_recommendations.md
docs/task_4_devops/: devops_prd.md  nixos_considerations.md  recommendations.md
docs/task_4_devops/demo_00/: DEMO_PACKAGE.md  DEMO_SCRIPT.md  test-external-apis.py  test-foamai-quick.sh  test-foamai-service.py  test-remote-server.sh
docs_staging/: BackendAPI.md  Contributing.md  DEPLOYMENT_IMPROVEMENTS.md  DevOps.md  EBS_VOLUME_MOUNTING.md  GITHUB_REGISTRY_DEPLOYMENT.md  README.md  TESTING.md  collaboration_recommendations.md  dev_README.md  examples_README.md  foamai_desktop_README.md  infra_README.md  nix_README.md  refactor_candidates_2.md  tests_README.md  user_data_modules_README.md
examples/: open_in_paraview.py
infra/: .gitignore  deploy-fresh-instance.sh  main.tf  outputs.tf  terraform.tfvars.example  terraform.tfvars.staging  user_data.sh  user_data.sh.tpl  variables.tf
infra/iam-policies/: IAM-SETUP-GUIDE.md  foamai-console-access-policy.json  minimal-console-access-policy.json
infra/user_data_modules/: 01_system_update.sh  02_docker_setup.sh  03_ebs_volume_setup.sh  04_application_setup.sh  05_service_setup.sh  06_docker_operations.sh  test_modules.sh  utils.sh
nix/: example-config.nix  hm.nix  pysideOverride.nix  shell.nix  terraformDerivation.nix  uv.nix
src/agents/: __init__.py  boundary_condition.py  case_writer.py  mesh_generator.py  nl_interpreter.py  orchestrator.py  results_review.py  simulation_executor.py  solver_selector.py  state.py  stl_processor.py  user_approval.py  visualization.py
src/foamai/: __init__.py  cli.py  config.py
src/foamai-client/: pyproject.toml
src/foamai-client/foamai_client/: cli.py
src/foamai-core/: pyproject.toml
src/foamai-core/foamai_core/: boundary_condition.py  case_writer.py  config.py  error_handler.py  mesh_convergence.py  mesh_generator.py  nl_interpreter.py  orchestrator.py  remote_executor.py  simulation_executor.py  solver_selector.py  state.py  user_approval.py  visualization.py
src/foamai-desktop/: DESKTOP_README.md  PRD.txt  pyproject.toml  requirements.txt  setup_desktop.sh
src/foamai-desktop/foamai_desktop/: .env.example  __init__.py  api_client.py  chat_interface.py  config.py  detail_dialogs.py  langgraph_interface.py  main.py  main_window.py  paraview_widget.py  run.py  simulation_cards.py  simulation_setup_widget.py  simulation_state.py
src/foamai-server/: ZOMBIE_PROCESS_HANDLING.md  ec2_validation.sh  pyproject.toml  requirements.txt
src/foamai-server/_docs/: API_descr.md  COMMAND_EXECUTION.md  all_api_routes.md  setup.md
src/foamai-server/foamai_server/: .env.example  __init__.py  celery_worker.py  command_service.py  config.py  database.py  debug_pvserver_validation.py  main.py  port_utils.py  process_utils.py  process_validator.py  project_service.py  pvserver_service.py  schemas.py  shutdown_celery_cleanly.py  test_clear_all_endpoint.py  test_command_execution.py  test_datetime_simple.py  test_file_upload.py  test_openfoam_autodetection.py  test_openfoam_commands.py  test_project_api.py  test_project_info.py  test_project_pvserver.py  test_pvserver_startup.py  validate_deployment.py
src/foamai/cli/: main.py
stl/: F1.stl  F1_scaled.stl  F1_scaled_to_delorean.stl  ik3.stl  nozzle_0.050_0.075_0.100.stl
tests/: README.md  test_user_approval.py
