[project]
name = "foamai"
version = "0.0.0"
description = "AI-assistant for running OpenFOAM"
readme = "README.md"
authors = [
    { name = "bbaserdem", email = "baserdemb@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]

[project.scripts]
flowgenius = "foamai:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyyaml>=6.0.2",
    "ruff>=0.12.1",
    {include-group = "test"},
]
test = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
]
