[project]
name = "foamai"
version = "0.1.0"
description = "AI-powered CFD simulation toolkit for OpenFOAM"
authors = [
    {name = "FoamAI Team", email = "team@foamai.com"}
]
dependencies = [
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0", 
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
    "langgraph>=0.2.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "numpy>=1.24.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
foamai = "foamai.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/foamai"]

[tool.black]
line-length = 88
target-version = ['py313']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
