[project]
name = "foamai"
version = "0.1.0"
description = "Workspace for AI-powered CFD"
readme = "README.md"
authors = [
    { name = "bbaserdem", email = "baserdemb@gmail.com" },
    { name = "ericDrury", email = "baserdemb@gmail.com" },
    { name = "mcbagz", email = "baserdemb@gmail.com" },
    { name = "jackwimbish", email = "baserdemb@gmail.com" },
]
requires-python = ">=3.13"

[tool.uv.workspace]
members = [
    "src/foamai-client",
    "src/foamai-core",
    "src/foamai-desktop",
    "src/foamai-server",
]

[tool.uv.sources]
foamai-client = { workspace = true }
foamai-core = { workspace = true }
foamai-desktop = { workspace = true }
foamai-server = { workspace = true }

[dependency-groups]
dev = [
    "pyyaml>=6.0.2",
    {include-group = "lint"},
    {include-group = "test"},
]
lint = [
    "ruff>=0.12.1",
]
test = [
    "pytest>=8.4.1",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
