[project]
name = "foamai-client"
version = "0.1.0"
description = "Client testing for FoamAI"
#readme = "README.md"
authors = [
    { name = "bbaserdem", email = "baserdemb@gmail.com" },
    { name = "ericDrury", email = "baserdemb@gmail.com" },
    { name = "mcbagz", email = "baserdemb@gmail.com" },
    { name = "jackwimbish", email = "baserdemb@gmail.com" },
]
requires-python = ">=3.12"
dependencies = [
    # This deps
    "click>=8.0.0",
    "rich>=13.0.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    # Agents are here
    "foamai-core"
]

[dependency-groups]
dev = [
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    {include-group = "test"},
    {include-group = "lint"},
]
lint = [
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
]
test = [
    "pytest>=8.4.1",
    "pytest-asyncio>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
    "pre-commit>=3.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
foamai-client = "foamai_client:cli"

[build-system]
requires = ["hatchling", "editables"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.hatch.build.targets.wheel]
packages = ["foamai_client"]
