# src/client/pyproject.toml
[project]
name = "foamai-core"
version = "0.1.0"
description = "Agent for FoamAI"
requires-python = ">=3.9"
dependencies = [
    # Deps for llm agent
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "loguru>=0.7.0",
    "langgraph>=0.2.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling", "editables"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["foamai_core"]
