# src/client/pyproject.toml
[project]
name = "foamai-desktop"
version = "0.1.0"
description = "Desktop GUI for FoamAI"
requires-python = ">=3.9"
dependencies = [
    # Regular deps
    "PySide6>=6.5.0",
    "requests>=2.31.0",
    "vtk>=9.2.0",
    "numpy>=1.24.0",
    "asyncio-mqtt>=0.13.0",
    "python-dotenv>=1.0.0",
    "Flask>=2.3.0",
    "Flask-CORS>=4.0.0",
    "foamai-core"
]

[build-system]
requires = ["hatchling", "editables"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["foamai_desktop"]
