# packages/backend-api/pyproject.toml
[project]
name = "foamai-server"
version = "0.1.0"
description = "Backend API server for FoamAI CFD operations"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",
    "celery>=5.5.3",
    "redis>=5.2.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "psutil>=6.1.1",
    "requests>=2.32.3",
    "pyyaml>=6.0.2",
    "rich>=14.0.0",
    "typer>=0.16.0",
    "click>=8.2.1",
    "httpx>=0.27.2",
    "jinja2>=3.1.6",
    "sentry-sdk>=2.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
foamai = "foamai_server:main"
